\name{NEWS}
\title{NEWS file for the gCMAPWeb package}

\section{Changes in version 1.0.2}{
\itemize{
 \item{IMPROVED: }{Additional documentation added: tutorial.pdf.}
}
}

\section{Changes in version 1.0.1}{
\itemize{
 \item{BUGFIX: }{Heatmaps are now displayed for results of a directional query.}
}
}